docs: Virtual Thread 설계 결정 항목 추가 및 설명 개선
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>